take a big step forward in terms of layout/aesthetics of the landing page, introduce precice-panel, fix responsive design issue, fix whitespacing, fix :focus state of external icons in top-nav

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -245,7 +245,7 @@ div#toc ul li {
 div#toc ul {
     background-color: whitesmoke;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 4px;
     max-width: 300px;
     color: gray;
 }
@@ -411,11 +411,11 @@ ul#mysidebar {
 /* end sidebar */
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    border-radius:5px;
+    border-radius:4px;
 }
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 span.projectTitle {
@@ -431,7 +431,7 @@ span.projectTitle {
     background-color: whitesmoke;
     padding: 10px;
     max-width: 250px;
-    border-radius: 5px;
+    border-radius: 4px;
     margin-top: 50px;
     font-style:italic;
     font-size:12px;
@@ -1197,7 +1197,7 @@ h4.panel-title {
     }
 }
 
-/* Changes to the customstyles.css start here */
+/* (Material) changes to the customstyles.css start here */
 
 body {
     font-size: 16px;
@@ -1220,14 +1220,7 @@ h2.subtitle {
     font-weight: 400;
 }
 
-h2.page-header {
-    padding-top: 0px;
-    margin-top: 40px;
-    border-bottom: 1px solid #0A76BB;
-}
-h2:nth-of-type(2n) {
-    border-bottom: 1px solid #ED762C;
-}
+
 
 
 
@@ -1256,6 +1249,7 @@ h2:nth-of-type(2n) {
     height: 1.15em;
     margin-left: -1.25em;
     /*margin-top: -0.1em;*/
+    transition: all 400ms;
 }
 a>.icon:hover:before {
   -webkit-transform: rotate(30deg);
@@ -1272,7 +1266,7 @@ a.navbar-brand {
 .nav > li > a {
     font-size: 16px;
     line-height: 20px;
-    padding: 2px 10px;
+    padding: 4px 10px;
 }
 .nav > li > a.nav-external {
     font-size: 24px;
