--- a/css/theme-precice.css
+++ b/css/theme-precice.css
@@ -58,7 +58,7 @@ a[data-toggle="tooltip"] {
     background-color: white;
     border-color: #0A76BB;
 }
-.navbar-inverse .navbar-nav>li>a, .navbar-inverse{
+.navbar-inverse .navbar-nav>li>a, .navbar-inverse, .navbar-inverse .navbar-nav>li>a:focus{
     color: #0A76BB;
 }
 
@@ -101,6 +101,7 @@ img.navbar-brand {
 .btn-secondary {
     color: #040606;
     border-color: #ED762C;
+    margin-bottom: 10px;
 }
 .btn-secondary:hover, .btn-secondary:focus {
     color: #040606;
@@ -182,4 +183,7 @@ li.sidebarTitle {
 }
 .panel-primary{
     border-color: #0A76BB;
+}
+a {
+    color: #0A76BB;
 }
